Added sockets for notification service and add GET connections and REMOVE connections APIs
